--- a/_config.yml
+++ b/_config.yml
@@ -62,8 +62,8 @@ gitalk:
   clientID: 6a89e6cc230d7872ad39                            #生成的clientID
   clientSecret: 9b7054f38c7bb55b35f08b62b57b266468147359    #生成的clientSecret
   repo: veltgop.github.io    #仓库名称
-  owner: Veltgop    # github用户名
-  admin: Veltgop
+  owner: VeltGop    # github用户名
+  admin: diamond-weiqu
   distractionFreeMode: true # 是否启用类似FB的阴影遮罩
 
 
